--- a/mokytojai.html
+++ b/mokytojai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 10:50:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 15:42:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67482406b467d25d8035ca92" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -190,10 +190,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <div class="btn-title-text">susisiekti</div>
                       </div>
                     </div>
-                    <div class="clip-2">
-                      <div class="button-icon"><img src="images/Vector-6_1Vector-6.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
-                      <div class="button-icon button-icon-bottom"><img src="images/Vector-12_1Vector-12.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
-                    </div>
                     <div class="button-hover-circle"></div>
                   </a>
                 </div>
@@ -218,9 +214,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </form>
   <div data-w-id="f4df245e-737a-6b9e-1956-f067cc660926" class="classes-2-banner">
     <div class="hero-background-3">
-      <div class="hero-collection-wrapper w-dyn-list">
-        <div role="list" class="home-3-con w-dyn-items">
-          <div role="listitem" class="home-3-item w-dyn-item">
+      <div class="hero-collection-wrapper">
+        <div class="home-3-con">
+          <div class="home-3-item">
             <div class="slider-background-wrap hero-wrapper">
               <div class="slider-background-home-3">
                 <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="background-april one">
@@ -229,9 +225,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </div>
             </div>
           </div>
-        </div>
-        <div class="w-dyn-empty">
-          <div>No items found.</div>
         </div>
       </div>
     </div>
@@ -322,7 +315,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="scroll-cover-white"></div>
               </div>
             </div>
-            <figure id="jovita" class="events-item w-node-ef5984cb-b4b7-958a-b84b-8b214d32d7fe-8035ca92">
+            <div id="jovita" class="events-item w-node-ef5984cb-b4b7-958a-b84b-8b214d32d7fe-8035ca92">
               <div class="team-item-card-2">
                 <div class="mok_card_inner">
                   <div class="teacher-card">
@@ -353,7 +346,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
                 <div class="scroll-cover-white"></div>
               </div>
-            </figure>
+            </div>
             <div id="neringa" class="events-item w-node-d60affbe-18da-28a6-be98-53b8ba33c249-8035ca92">
               <div class="team-item-card-2">
                 <div class="mok_card_inner">
