--- a/sokio-pamokos.html
+++ b/sokio-pamokos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 10:50:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 15:42:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6746a160115d4cae431bdb82" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -191,10 +191,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <div class="btn-title-text">susisiekti</div>
                       </div>
                     </div>
-                    <div class="clip-2">
-                      <div class="button-icon"><img src="images/Vector-6_1Vector-6.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
-                      <div class="button-icon button-icon-bottom"><img src="images/Vector-12_1Vector-12.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
-                    </div>
                     <div class="button-hover-circle"></div>
                   </a>
                 </div>
@@ -217,11 +213,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
     <div data-w-id="cffaa0d6-0cd7-3509-9f08-dbbd1e309db4" class="search-close-button"></div>
   </form>
-  <div data-w-id="76b6d0d3-22ec-9e82-252e-961dbd24b449" class="classes-2-banner">
+  <div data-w-id="b10566e5-96f8-834d-eee0-44cdabe676b3" class="classes-2-banner">
     <div class="hero-background-3">
-      <div class="hero-collection-wrapper w-dyn-list">
-        <div role="list" class="home-3-con w-dyn-items">
-          <div role="listitem" class="home-3-item w-dyn-item">
+      <div class="hero-collection-wrapper">
+        <div class="home-3-con">
+          <div class="home-3-item">
             <div class="slider-background-wrap hero-wrapper">
               <div class="slider-background-home-3">
                 <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="background-april one">
@@ -231,16 +227,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
           </div>
         </div>
-        <div class="w-dyn-empty">
-          <div>No items found.</div>
-        </div>
       </div>
     </div>
     <div class="grid-wrapper">
-      <div id="w-node-_76b6d0d3-22ec-9e82-252e-961dbd24b456-431bdb82" class="banner-hero-content">
-        <div id="w-node-_76b6d0d3-22ec-9e82-252e-961dbd24b457-431bdb82" class="hero-top">
+      <div id="w-node-b10566e5-96f8-834d-eee0-44cdabe676bd-431bdb82" class="banner-hero-content">
+        <div id="w-node-b10566e5-96f8-834d-eee0-44cdabe676be-431bdb82" class="hero-top">
           <div class="hero-intro">
-            <h1 data-w-id="76b6d0d3-22ec-9e82-252e-961dbd24b45b" style="opacity:0" class="title-3 class-2-title">šokio Pamokos vilniuje</h1>
+            <h1 data-w-id="b10566e5-96f8-834d-eee0-44cdabe676c0" style="opacity:0" class="title-3 class-2-title">SUSIPAžinkite su mūsų Mokytojais</h1>
           </div>
         </div>
       </div>
@@ -373,7 +366,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                           </div>
                         </div>
                       </a>
-                      <p id="w-node-_3a257c64-c857-3d6f-44e7-851a91e90a1f-431bdb82" class="about-animal-description">Šie X-X metų vaikams skirti užsiėmimai padės stiprinti jėgą, lankstumą ir koordinaciją smagiu ir įtraukiančiu būdu. Pagal amžių atitinkančius pratimus, tempimus ir pagrindinius gimnastikos įgūdžius vaikai kuria stipru judėjimo pagrindą, stiprina pasitikėjimą savimi ir kūno suvokimą.</p>
+                      <p id="w-node-_3a257c64-c857-3d6f-44e7-851a91e90a1f-431bdb82" class="about-animal-description">Šie 5-8 metų vaikams skirti užsiėmimai padės stiprinti jėgą, lankstumą ir koordinaciją smagiu ir įtraukiančiu būdu. Pagal amžių atitinkančius pratimus, tempimus ir pagrindinius gimnastikos įgūdžius vaikai kuria stipru judėjimo pagrindą, stiprina pasitikėjimą savimi ir kūno suvokimą.</p>
                     </div>
                     <div class="vacation-details">
                       <div class="link-wrap">
@@ -401,7 +394,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       </div>
                     </div>
                     <div class="hero-background-image image-siuolaikinis-vaikam">
-                      <a data-w-id="ead12e49-645e-2b3f-596a-64d608ab13bf" href="#" class="class-ov w-inline-block">
+                      <a data-w-id="ead12e49-645e-2b3f-596a-64d608ab13bf" href="klases/siuolaikinio-sokio-pamokos.html" class="class-ov w-inline-block">
                         <p class="paragraph-hidden">q</p>
                       </a>
                     </div>
