--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 10:50:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 15:42:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6746a160115d4cae431bdba8" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -191,10 +191,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <div class="btn-title-text">susisiekti</div>
                       </div>
                     </div>
-                    <div class="clip-2">
-                      <div class="button-icon"><img src="images/Vector-6_1Vector-6.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
-                      <div class="button-icon button-icon-bottom"><img src="images/Vector-12_1Vector-12.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
-                    </div>
                     <div class="button-hover-circle"></div>
                   </a>
                 </div>
@@ -216,9 +212,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div data-delay="5500" data-animation="over" class="hero-slider w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="true" data-autoplay-limit="0" data-nav-spacing="3" data-duration="0" data-infinite="true">
         <div class="hero-slider-mask w-slider-mask">
           <div class="hero-slide-home-3 w-slide">
-            <div class="hero-collection-wrapper w-dyn-list">
-              <div role="list" class="home-3-con w-dyn-items">
-                <div role="listitem" class="home-3-item w-dyn-item">
+            <div class="hero-collection-wrapper">
+              <div class="home-3-con">
+                <div class="home-3-item">
                   <div class="slider-background-wrap hero-wrapper">
                     <div class="slider-background-home-3">
                       <div class="background-3 one">
@@ -227,45 +223,21 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="w-dyn-empty">
-                <div>No items found.</div>
               </div>
             </div>
           </div>
           <div class="hero-slide-home-3 w-slide">
-            <div class="hero-collection-wrapper w-dyn-list">
-              <div role="list" class="home-3-con w-dyn-items">
-                <div role="listitem" class="home-3-item w-dyn-item">
+            <div class="hero-collection-wrapper">
+              <div class="home-3-con">
+                <div class="home-3-item">
                   <div class="slider-background-wrap hero-wrapper">
                     <div class="slider-background-home-3">
-                      <div class="background-3 one">
+                      <div class="background-3 two">
                         <div class="overlay"></div>
                       </div>
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="w-dyn-empty">
-                <div>No items found.</div>
-              </div>
-            </div>
-          </div>
-          <div class="hero-slide-home-3 w-slide">
-            <div class="hero-collection-wrapper w-dyn-list">
-              <div role="list" class="home-3-con w-dyn-items">
-                <div role="listitem" class="home-3-item w-dyn-item">
-                  <div class="slider-background-wrap hero-wrapper">
-                    <div class="slider-background-home-3">
-                      <div class="background-3 one">
-                        <div class="overlay"></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="w-dyn-empty">
-                <div>No items found.</div>
               </div>
             </div>
           </div>
