--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 15:42:07 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:17:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6746a160115d4cae431bdb49" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -50,7 +50,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="clip-group-section">
     <div class="_404-content">
       <div data-w-id="c73acebc-476e-8251-a4ef-f9087dd3f76f" style="opacity:0" class="_404-logo-wrapper-2">
-        <a href="wireframes/home-1.html" class="brand-logo-2 w-nav-brand"><img src="images/white.svg" loading="lazy" width="100" height="24" alt="" class="kunu-logo"></a>
+        <a href="index.html" class="brand-logo-2 w-nav-brand"><img src="images/white.svg" loading="lazy" width="100" height="24" alt="" class="kunu-logo"></a>
       </div>
       <div class="_404-wrapper">
         <h1 data-w-id="c73acebc-476e-8251-a4ef-f9087dd3f773" style="opacity:0" class="_404-title text-white-2">404</h1>
