--- a/klases/sokio-pamokos-vaikams.html
+++ b/klases/sokio-pamokos-vaikams.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 15:42:07 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:17:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674acd9c5402e77828b238cf" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -386,16 +386,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                           <div class="form-bg---contact">
                             <div id="w-node-_395e13c4-8d1f-d6a1-a127-bc31879a7748-28b238cf" class="form-title">
                               <div data-netlify="true" id="w-node-d46d82c1-40f2-314f-f684-5074ad843808-ad843808" class="form-block w-form">
-                                <form id="wf-form-Contact-form" name="wf-form-Contact-form" data-name="Contact form" redirect="/aciu" data-redirect="/aciu" method="post" data-netlify="true" class="form w-node-d46d82c1-40f2-314f-f684-5074ad843809-ad843808" data-wf-page-id="674acd9c5402e77828b238cf" data-wf-element-id="d46d82c1-40f2-314f-f684-5074ad843809">
+                                <form method="post" class="form w-node-d46d82c1-40f2-314f-f684-5074ad843809-ad843808" data-netlify="true" name="wf-form-Contact-form" data-name="Contact form" action="/aciu" id="wf-form-Contact-form" redirect="https://kunu.studio/aciu" data-redirect="https://kunu.studio/aciu" data-wf-page-id="674acd9c5402e77828b238cf" data-wf-element-id="d46d82c1-40f2-314f-f684-5074ad843809">
                                   <div data-netlify="true" class="feild-form-wrapper">
                                     <div class="field-block">
-                                      <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad84380c-ad843808" class="field-label-3 mb-0">Vardas</h6><input class="form-input w-node-d46d82c1-40f2-314f-f684-5074ad84380e-ad843808 w-input" maxlength="256" name="Email" data-name="Email" placeholder="Vardas" type="text" id="Name" required="">
+                                      <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad84380c-ad843808" class="field-label-3 mb-0">Vardas*</h6><input class="form-input w-node-d46d82c1-40f2-314f-f684-5074ad84380e-ad843808 w-input" maxlength="256" name="Email" data-name="Email" placeholder="Vardas" type="text" id="Name" required="">
                                     </div>
                                     <div id="w-node-d46d82c1-40f2-314f-f684-5074ad84380f-ad843808" class="field-block">
-                                      <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843810-ad843808" class="field-label-3 mb-0">El. Paštas</h6><input class="form-input w-node-d46d82c1-40f2-314f-f684-5074ad843812-ad843808 w-input" maxlength="256" name="Email-6" data-name="Email 6" placeholder="El. Paštas" type="email" id="Email-6" required="">
+                                      <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843810-ad843808" class="field-label-3 mb-0">El. Paštas*</h6><input class="form-input w-node-d46d82c1-40f2-314f-f684-5074ad843812-ad843808 w-input" maxlength="256" name="Email-6" data-name="Email 6" placeholder="El. Paštas" type="email" id="Email-6" required="">
+                                    </div>
+                                    <div id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc6-ad843808" class="field-block">
+                                      <h6 id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc7-ad843808" class="field-label-3 mb-0">Telefonas</h6><input class="form-input w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc9-ad843808 w-input" maxlength="256" name="Phone-Nr" data-name="Phone Nr" placeholder="Telefonas" type="tel" id="Phone-Nr">
                                     </div>
                                     <div class="field-block">
-                                      <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843814-ad843808" class="field-label-3 mb-0">žinutė</h6><textarea id="Message-2" name="Message-2" maxlength="5000" data-name="Message 2" placeholder="žinutė" required="" class="form-input message-input w-node-d46d82c1-40f2-314f-f684-5074ad843816-ad843808 w-input"></textarea>
+                                      <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843814-ad843808" class="field-label-3 mb-0">žinutė*</h6><textarea id="Message-2" name="Message-2" maxlength="5000" data-name="Message 2" placeholder="žinutė" required="" class="form-input message-input w-node-d46d82c1-40f2-314f-f684-5074ad843816-ad843808 w-input"></textarea>
                                       <div id="w-node-e04d204d-fa7e-a4f7-efb1-3e6e1c5b8ba1-ad843808" class="w-embed w-script">
                                         <script></script>
                                         <input type="hidden" id="utm_source" placeholder="utm_source" name="utm_source">
