--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <p class="_404-text text-white-2">Šito puslapio nėra.</p>
           <div class="no-shrink-btn full-mobile">
             <div class="button-hero-wrapper">
-              <a href="wireframes/home-1.html" class="button-transparent w-inline-block">
+              <a href="wireframes/home.html" class="button-transparent w-inline-block">
                 <div class="clip-2">
                   <div class="btn-banner-text">
                     <div class="btn-title-text dark-text">Grįžti į Pagrindinį Puslapį</div>
