--- a/kontaktai.html
+++ b/kontaktai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:17:23 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:59:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674829a03ff763632940d900" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -69,7 +69,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                   <div class="dropdown-menu-2">
                     <div class="top-tablet-menu-2">
-                      <a href="wireframes/home-1.html" class="logo-mobile-4 w-nav-brand"><img src="images/white.svg" loading="lazy" alt="" height="24" class="kunu-logo"></a>
+                      <a href="index.html" class="logo-mobile-4 w-nav-brand"><img src="images/white.svg" loading="lazy" alt="" height="24" class="kunu-logo"></a>
                       <div class="border-wrap-2">
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
                           <div class="dropdown-item w-dropdown-toggle">
@@ -204,50 +204,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="hero-form-popup">
-    <div data-w-id="28d5e596-adc9-9336-e779-4d4e1adf665a" class="flyout-overlay"></div>
-    <div class="hero-video-wrapper">
-      <div data-w-id="28d5e596-adc9-9336-e779-4d4e1adf665c" style="opacity:0" class="large-contacts-form">
-        <div class="inquire-form-wrapper">
-          <div class="top-form-wrapper">
-            <h4 class="pop-up-title">Book a class, let&#x27;s dance!</h4>
-            <p class="pop-up-description">Your dance journey with April is about to begin. Secure your spot in our exhilarating group class by choosing a convenient date from our calendar.</p>
-            <div class="link-top-wrap">
-              <a data-w-id="85273eb5-60c7-8530-265e-7b51e9f44eaf" href="https://calendly.com/" target="_blank" class="hero-link dark-form w-inline-block">
-                <div class="btn-title-text dark-text">Booking calendar</div>
-                <div class="hover-black-line">
-                  <div style="-webkit-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="hover-line-fill"></div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="inquire-form-black w-form">
-            <form id="wf-form-Inquire-Form" name="wf-form-Inquire-Form" data-name="Inquire Form" method="get" class="event-form" data-wf-page-id="674829a03ff763632940d900" data-wf-element-id="c1dd48db-009b-e449-7882-c0691c6f672b">
-              <div class="contact-fields">
-                <div class="contact-field-wrapper"><label for="First-name" id="w-node-c1dd48db-009b-e449-7882-c0691c6f672e-2940d900" class="field-label-black">Name</label><input class="form-input-black w-node-c1dd48db-009b-e449-7882-c0691c6f6730-2940d900 w-input" maxlength="256" name="First-name" data-name="First Name" placeholder="First name" type="text" id="First-name" required=""><input class="form-input-black w-node-c1dd48db-009b-e449-7882-c0691c6f6731-2940d900 w-input" maxlength="256" name="Last-name" data-name="Last Name" placeholder="Last name" type="text" id="Last-name" required=""></div>
-                <div id="w-node-_9c17e88f-a848-7ca8-edef-2e9e8b6104f5-2940d900" class="contact-field-wrap">
-                  <div class="contact-field-wrapper"><label for="Email-4" id="w-node-c1dd48db-009b-e449-7882-c0691c6f6733-2940d900" class="field-label-black">Email</label><input class="form-input-black w-node-c1dd48db-009b-e449-7882-c0691c6f6735-2940d900 w-input" maxlength="256" name="Email-4" data-name="Email 4" placeholder="Your email" type="email" id="Email-4" required=""></div>
-                  <div class="contact-field-wrapper"><label for="Phone-2" id="w-node-c1dd48db-009b-e449-7882-c0691c6f6737-2940d900" class="field-label-black">Phone</label><input class="form-input-black w-node-c1dd48db-009b-e449-7882-c0691c6f6739-2940d900 w-input" maxlength="256" name="Phone-2" data-name="Phone 2" placeholder="(555) 555-5555" type="tel" id="Phone-2" required=""></div>
-                </div>
-              </div><input type="submit" data-wait="Please wait..." id="w-node-c1dd48db-009b-e449-7882-c0691c6f673a-2940d900" class="black-form-button w-button" value="Book a class now">
-            </form>
-            <div class="success-message-black w-form-done">
-              <div class="success-message-content">
-                <h5 class="thx black">Congratulations! 🎉</h5>
-                <div class="text-item-black">You&#x27;re one step closer to dancing with April. We can&#x27;t wait to see you on the dance floor!<span class="insta-tag">#DanceWithApril 💃🕺</span></div>
-              </div>
-            </div>
-            <div class="error-black-april-message w-form-fail">
-              <div>Oops! Something went wrong while submitting the form.</div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a data-w-id="28d5e596-adc9-9336-e779-4d4e1adf6684" href="#" class="close-link w-inline-block"><img src="https://uploads-ssl.webflow.com/645b92f6f5a347f9fc501dda/64620c180fae23c844cc9680_x_icon.png" loading="lazy" width="18" id="w-node-_28d5e596-adc9-9336-e779-4d4e1adf6685-2940d900" alt="Project photo" class="close-img">
-        <div class="close-text">Close</div>
-      </a>
     </div>
   </div>
   <div data-w-id="71e3edee-e3b1-4f67-2c1a-18f2d077f8f4" class="classes-2-banner">
@@ -524,7 +480,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="w-embed w-iframe"><iframe src="https://embeds.beehiiv.com/361e17d7-3737-4bd0-824d-ea3fadbf25c5?slim=true" data-test-id="beehiiv-embed" height="52" frameborder="0" scrolling="no" style="margin: 0; border-radius: 0px !important; background-color: transparent;"></iframe></div>
             <div class="div-block-2">
               <a href="https://www.facebook.com/kunustudio.vilnius" target="_blank" class="social_image_wrapper w-inline-block"><img src="images/icons8-facebook.svg" loading="lazy" alt=""></a>
-              <a href="https://www.instagram.com/Kunustudio.Vilnius" class="social_image_wrapper w-inline-block"><img src="images/icons8-instagram.svg" loading="lazy" alt=""></a>
+              <a href="https://www.instagram.com/kunustudio.vilnius" class="social_image_wrapper w-inline-block"><img src="images/icons8-instagram.svg" loading="lazy" alt=""></a>
             </div>
           </div>
         </div>
