--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:17:23 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:59:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6746a160115d4cae431bdb49" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -59,7 +59,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <p class="_404-text text-white-2">Šito puslapio nėra.</p>
           <div class="no-shrink-btn full-mobile">
             <div class="button-hero-wrapper">
-              <a href="wireframes/home-1.html" class="button-transparent w-inline-block">
+              <a href="index.html" class="button-transparent w-inline-block">
                 <div class="clip-2">
                   <div class="btn-banner-text">
                     <div class="btn-title-text dark-text">Grįžti į Pagrindinį Puslapį</div>
