--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:17:23 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:59:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6746a160115d4cae431bdba8" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -70,7 +70,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                   <div class="dropdown-menu-2">
                     <div class="top-tablet-menu-2">
-                      <a href="wireframes/home-1.html" class="logo-mobile-4 w-nav-brand"><img src="images/white.svg" loading="lazy" alt="" height="24" class="kunu-logo"></a>
+                      <a href="index.html" aria-current="page" class="logo-mobile-4 w-nav-brand w--current"><img src="images/white.svg" loading="lazy" alt="" height="24" class="kunu-logo"></a>
                       <div class="border-wrap-2">
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
                           <div class="dropdown-item w-dropdown-toggle">
@@ -252,7 +252,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div id="w-node-_0c1d3287-53ef-c0ec-dadb-07def4950c44-431bdba8" class="hero-top">
           <div class="hero-intro">
             <h6 id="w-node-_6d440bb5-f80e-24b2-a4a1-3a94db33a42e-431bdba8" class="banner-subtitle">Atraskite šokį</h6>
-            <h1 class="title-3">Šiuolaikinio Šokio ir Baleto Studija KuNU</h1>
+            <h1 class="title-3">Šiuolaikinio Šokio ir Baleto Studija KUNU</h1>
             <div class="button-group-wrapper">
               <div class="no-shrink">
                 <a href="sokio-pamokos.html" class="white-april-button full-mobile w-button">šokio pamokos</a>
@@ -664,7 +664,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="w-embed w-iframe"><iframe src="https://embeds.beehiiv.com/361e17d7-3737-4bd0-824d-ea3fadbf25c5?slim=true" data-test-id="beehiiv-embed" height="52" frameborder="0" scrolling="no" style="margin: 0; border-radius: 0px !important; background-color: transparent;"></iframe></div>
             <div class="div-block-2">
               <a href="https://www.facebook.com/kunustudio.vilnius" target="_blank" class="social_image_wrapper w-inline-block"><img src="images/icons8-facebook.svg" loading="lazy" alt=""></a>
-              <a href="https://www.instagram.com/Kunustudio.Vilnius" class="social_image_wrapper w-inline-block"><img src="images/icons8-instagram.svg" loading="lazy" alt=""></a>
+              <a href="https://www.instagram.com/kunustudio.vilnius" class="social_image_wrapper w-inline-block"><img src="images/icons8-instagram.svg" loading="lazy" alt=""></a>
             </div>
           </div>
         </div>
