--- a/klases/sokio-terapija.html
+++ b/klases/sokio-terapija.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:17:23 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:59:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674acf5ee45612d309e816a7" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
-  <title>Šokio Terapija</title>
-  <meta content="Šokio/judėjimo terapija arba šokio judesio psichoterapija – tai psichoterapinis judesio ir šokio naudojimas emocinei, intelektualinei ir motorinei kūno funkcijai gerinti, nagrinėjant ryšį tarp judesio ir emocijų." name="description">
-  <meta content="Šokio Terapija" property="og:title">
-  <meta content="Šokio/judėjimo terapija arba šokio judesio psichoterapija – tai psichoterapinis judesio ir šokio naudojimas emocinei, intelektualinei ir motorinei kūno funkcijai gerinti, nagrinėjant ryšį tarp judesio ir emocijų." property="og:description">
+  <title>Šokio ir Judesio Terapija | KUNU</title>
+  <meta content="Šokio ir judėjimo terapija arba šokio judesio psichoterapija – tai psichoterapinis judesio ir šokio naudojimas emocinei, intelektualinei ir motorinei kūno funkcijai gerinti, nagrinėjant ryšį tarp judesio ir emocijų." name="description">
+  <meta content="Šokio ir Judesio Terapija | KUNU" property="og:title">
+  <meta content="Šokio ir judėjimo terapija arba šokio judesio psichoterapija – tai psichoterapinis judesio ir šokio naudojimas emocinei, intelektualinei ir motorinei kūno funkcijai gerinti, nagrinėjant ryšį tarp judesio ir emocijų." property="og:description">
   <meta content="https://cdn.prod.website-files.com/6746a160115d4cae431bdad6/67571e969ed99d1a5f3920be_OG%20Image.png" property="og:image">
-  <meta content="Šokio Terapija" property="twitter:title">
-  <meta content="Šokio/judėjimo terapija arba šokio judesio psichoterapija – tai psichoterapinis judesio ir šokio naudojimas emocinei, intelektualinei ir motorinei kūno funkcijai gerinti, nagrinėjant ryšį tarp judesio ir emocijų." property="twitter:description">
+  <meta content="Šokio ir Judesio Terapija | KUNU" property="twitter:title">
+  <meta content="Šokio ir judėjimo terapija arba šokio judesio psichoterapija – tai psichoterapinis judesio ir šokio naudojimas emocinei, intelektualinei ir motorinei kūno funkcijai gerinti, nagrinėjant ryšį tarp judesio ir emocijų." property="twitter:description">
   <meta content="https://cdn.prod.website-files.com/6746a160115d4cae431bdad6/67571e969ed99d1a5f3920be_OG%20Image.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -70,7 +70,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                     <div class="dropdown-menu-2">
                       <div class="top-tablet-menu-2">
-                        <a href="../wireframes/home-1.html" class="logo-mobile-4 w-nav-brand"><img src="../images/white.svg" loading="lazy" alt="" height="24" class="kunu-logo"></a>
+                        <a href="../index.html" class="logo-mobile-4 w-nav-brand"><img src="../images/white.svg" loading="lazy" alt="" height="24" class="kunu-logo"></a>
                         <div class="border-wrap-2">
                           <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
                             <div class="dropdown-item w-dropdown-toggle">
@@ -715,7 +715,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="w-embed w-iframe"><iframe src="https://embeds.beehiiv.com/361e17d7-3737-4bd0-824d-ea3fadbf25c5?slim=true" data-test-id="beehiiv-embed" height="52" frameborder="0" scrolling="no" style="margin: 0; border-radius: 0px !important; background-color: transparent;"></iframe></div>
               <div class="div-block-2">
                 <a href="https://www.facebook.com/kunustudio.vilnius" target="_blank" class="social_image_wrapper w-inline-block"><img src="../images/icons8-facebook.svg" loading="lazy" alt=""></a>
-                <a href="https://www.instagram.com/Kunustudio.Vilnius" class="social_image_wrapper w-inline-block"><img src="../images/icons8-instagram.svg" loading="lazy" alt=""></a>
+                <a href="https://www.instagram.com/kunustudio.vilnius" class="social_image_wrapper w-inline-block"><img src="../images/icons8-instagram.svg" loading="lazy" alt=""></a>
               </div>
             </div>
           </div>
