--- a/sokiu-pamoku-kainos.html
+++ b/sokiu-pamoku-kainos.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:17:23 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:59:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6746a160115d4cae431bdbab" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
-  <title>Šokių Pamokų Kainos Vilniuje | KUNU</title>
+  <title>Šokio Pamokų Kainos Vilniuje | KUNU</title>
   <meta content="Kunu Studio šokių pamokų kainas Vilniuje. Atraskite įvairias šokių pamokas, užsiėmimų tipus ir lanksčius kainų pasiūlymus pradedantiesiems ir pažengusiems." name="description">
-  <meta content="Šokių Pamokų Kainos Vilniuje | KUNU" property="og:title">
+  <meta content="Šokio Pamokų Kainos Vilniuje | KUNU" property="og:title">
   <meta content="Kunu Studio šokių pamokų kainas Vilniuje. Atraskite įvairias šokių pamokas, užsiėmimų tipus ir lanksčius kainų pasiūlymus pradedantiesiems ir pažengusiems." property="og:description">
   <meta content="https://cdn.prod.website-files.com/6746a160115d4cae431bdad6/67571e969ed99d1a5f3920be_OG%20Image.png" property="og:image">
-  <meta content="Šokių Pamokų Kainos Vilniuje | KUNU" property="twitter:title">
+  <meta content="Šokio Pamokų Kainos Vilniuje | KUNU" property="twitter:title">
   <meta content="Kunu Studio šokių pamokų kainas Vilniuje. Atraskite įvairias šokių pamokas, užsiėmimų tipus ir lanksčius kainų pasiūlymus pradedantiesiems ir pažengusiems." property="twitter:description">
   <meta content="https://cdn.prod.website-files.com/6746a160115d4cae431bdad6/67571e969ed99d1a5f3920be_OG%20Image.png" property="twitter:image">
   <meta property="og:type" content="website">
@@ -69,7 +69,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                   <div class="dropdown-menu-2">
                     <div class="top-tablet-menu-2">
-                      <a href="wireframes/home-1.html" class="logo-mobile-4 w-nav-brand"><img src="images/white.svg" loading="lazy" alt="" height="24" class="kunu-logo"></a>
+                      <a href="index.html" class="logo-mobile-4 w-nav-brand"><img src="images/white.svg" loading="lazy" alt="" height="24" class="kunu-logo"></a>
                       <div class="border-wrap-2">
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
                           <div class="dropdown-item w-dropdown-toggle">
@@ -204,50 +204,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="hero-form-popup">
-    <div data-w-id="42e47e49-494b-4774-2667-2c2c829786af" class="flyout-overlay"></div>
-    <div class="hero-video-wrapper">
-      <div data-w-id="42e47e49-494b-4774-2667-2c2c829786b1" style="opacity:0" class="large-contacts-form">
-        <div class="inquire-form-wrapper">
-          <div class="top-form-wrapper">
-            <h4 class="pop-up-title">Try the first free dance class!</h4>
-            <p class="pop-up-description">Your dance journey with April is about to begin. Secure your spot in our exhilarating group class by choosing a convenient date from our calendar.</p>
-            <div class="link-top-wrap">
-              <a data-w-id="42e47e49-494b-4774-2667-2c2c829786b9" href="https://calendly.com/" target="_blank" class="hero-link dark-form w-inline-block">
-                <div class="btn-title-text dark-text">Booking calendar</div>
-                <div class="hover-black-line">
-                  <div style="-webkit-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="hover-line-fill"></div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="inquire-form-black w-form">
-            <form id="wf-form-Inquire-Form" name="wf-form-Inquire-Form" data-name="Inquire Form" method="get" class="event-form" data-wf-page-id="6746a160115d4cae431bdbab" data-wf-element-id="42e47e49-494b-4774-2667-2c2c829786bf">
-              <div class="contact-fields">
-                <div class="contact-field-wrapper"><label for="First-name" id="w-node-_42e47e49-494b-4774-2667-2c2c829786c2-431bdbab" class="field-label-black">Name</label><input class="form-input-black w-node-_42e47e49-494b-4774-2667-2c2c829786c4-431bdbab w-input" maxlength="256" name="First-name" data-name="First Name" placeholder="First name" type="text" id="First-name" required=""><input class="form-input-black w-node-_42e47e49-494b-4774-2667-2c2c829786c5-431bdbab w-input" maxlength="256" name="Last-name" data-name="Last Name" placeholder="Last name" type="text" id="Last-name" required=""></div>
-                <div id="w-node-_42e47e49-494b-4774-2667-2c2c829786c6-431bdbab" class="contact-field-wrap">
-                  <div class="contact-field-wrapper"><label for="Email-4" id="w-node-_42e47e49-494b-4774-2667-2c2c829786c8-431bdbab" class="field-label-black">Email</label><input class="form-input-black w-node-_42e47e49-494b-4774-2667-2c2c829786ca-431bdbab w-input" maxlength="256" name="Email-4" data-name="Email 4" placeholder="Your email" type="email" id="Email-4" required=""></div>
-                  <div class="contact-field-wrapper"><label for="Phone" id="w-node-_42e47e49-494b-4774-2667-2c2c829786cc-431bdbab" class="field-label-black">Phone</label><input class="form-input-black w-node-_42e47e49-494b-4774-2667-2c2c829786ce-431bdbab w-input" maxlength="256" name="Phone-2" data-name="Phone 2" placeholder="(555) 555-5555" type="tel" id="Phone-2" required=""></div>
-                </div>
-              </div><input type="submit" data-wait="Please wait..." id="w-node-_42e47e49-494b-4774-2667-2c2c829786cf-431bdbab" class="black-form-button w-button" value="Book a class now">
-            </form>
-            <div class="success-message-black w-form-done">
-              <div class="success-message-content">
-                <h5 class="thx black">Congratulations! 🎉</h5>
-                <div class="text-item-black">You&#x27;re one step closer to dancing with April. We can&#x27;t wait to see you on the dance floor!<span class="insta-tag">#DanceWithApril 💃🕺</span></div>
-              </div>
-            </div>
-            <div class="error-black-april-message w-form-fail">
-              <div>Oops! Something went wrong while submitting the form.</div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a data-w-id="42e47e49-494b-4774-2667-2c2c829786db" href="#" class="close-link w-inline-block"><img src="https://uploads-ssl.webflow.com/645b92f6f5a347f9fc501dda/64620c180fae23c844cc9680_x_icon.png" loading="lazy" width="18" id="w-node-_42e47e49-494b-4774-2667-2c2c829786dc-431bdbab" alt="Project photo" class="close-img">
-        <div class="close-text">Close</div>
-      </a>
     </div>
   </div>
   <div class="gray-section top-padding">
@@ -959,7 +915,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="w-embed w-iframe"><iframe src="https://embeds.beehiiv.com/361e17d7-3737-4bd0-824d-ea3fadbf25c5?slim=true" data-test-id="beehiiv-embed" height="52" frameborder="0" scrolling="no" style="margin: 0; border-radius: 0px !important; background-color: transparent;"></iframe></div>
             <div class="div-block-2">
               <a href="https://www.facebook.com/kunustudio.vilnius" target="_blank" class="social_image_wrapper w-inline-block"><img src="images/icons8-facebook.svg" loading="lazy" alt=""></a>
-              <a href="https://www.instagram.com/Kunustudio.Vilnius" class="social_image_wrapper w-inline-block"><img src="images/icons8-instagram.svg" loading="lazy" alt=""></a>
+              <a href="https://www.instagram.com/kunustudio.vilnius" class="social_image_wrapper w-inline-block"><img src="images/icons8-instagram.svg" loading="lazy" alt=""></a>
             </div>
           </div>
         </div>
