--- a/kontaktai.html
+++ b/kontaktai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:59:13 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 09:56:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674829a03ff763632940d900" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -118,18 +118,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       </div>
                       <div class="login-tablet-wrapper">
                         <div class="wrapper-transparent-btn">
-                          <a href="#" class="button-transparent w-inline-block">
+                          <a href="kontaktai.html" aria-current="page" class="button-transparent w-inline-block w--current">
                             <div class="clip-2">
                               <div class="btn-banner-text">
-                                <div class="btn-title-text dark-text">PAšokam</div>
+                                <div class="btn-title-text dark-text">susisiekti</div>
                               </div>
                               <div class="btn-banner-text button-text-bottom">
-                                <div class="btn-title-text">pašokam Dance</div>
+                                <div class="btn-title-text">susisiekti</div>
                               </div>
-                            </div>
-                            <div class="clip-2">
-                              <div class="button-icon"><img src="images/Vector-6_1Vector-6.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
-                              <div class="button-icon button-icon-bottom"><img src="images/Vector-12_1Vector-12.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
                             </div>
                             <div class="button-hover-circle"></div>
                           </a>
@@ -184,7 +180,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <a href="kontaktai.html" aria-current="page" class="button-transparent w-inline-block w--current">
                     <div class="clip-2">
                       <div class="btn-banner-text">
-                        <div class="btn-title-text dark-text">susiekti</div>
+                        <div class="btn-title-text dark-text">susisiekti</div>
                       </div>
                       <div class="btn-banner-text button-text-bottom">
                         <div class="btn-title-text">susisiekti</div>
@@ -300,16 +296,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div id="w-node-_3132d2c4-2864-35e1-8521-e455126e8143-2940d900" data-w-id="3132d2c4-2864-35e1-8521-e455126e8143" style="opacity:0" class="sidebar-right">
                 <div class="sticky-sidebar-block">
                   <div class="useful-links">
-                    <div id="w-node-_3132d2c4-2864-35e1-8521-e455126e8146-2940d900" class="intro-top">
+                    <div id="w-node-_194ef073-fb15-6b66-1979-166b472ccfbc-472ccfbb" class="intro-top">
                       <h4 class="useful-info-text">KONTAKTAI</h4>
                     </div>
-                    <div id="w-node-_3132d2c4-2864-35e1-8521-e455126e8149-2940d900" class="useful-list">
+                    <div id="w-node-_194ef073-fb15-6b66-1979-166b472ccfbf-472ccfbb" class="useful-list">
                       <a href="tel:(0640)19320" class="contact-us-link w-inline-block">
                         <div class="line-link-wrap">
                           <p class="dropdown-text">(0-628) 19 320</p>
                         </div>
                       </a>
-                      <a href="https://ig.me/m/kunustudio.vilnius" target="_blank" class="contact-us-link w-inline-block">
+                      <a id="w-node-_194ef073-fb15-6b66-1979-166b472ccfc4-472ccfbb" href="https://ig.me/m/kunustudio.vilnius" class="secondary-black-button w-button">Instagram Messenger</a>
+                      <a href="https://ig.me/m/kunustudio.vilnius" target="_blank" class="contact-us-link mobile w-inline-block">
                         <div class="line-link-wrap">
                           <p class="dropdown-text">INSTAGRAM <br>MESSENGER</p>
                         </div>
@@ -341,7 +338,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                               <div class="team-item-card-2">
                                 <div class="contact_map_inner">
                                   <div id="w-node-_19a8903f-62d2-1c4c-d486-ef6c7a8912a0-2940d900" class="team-intro-card---right">
-                                    <div class="w-richtext">
+                                    <div class="text-align-right w-richtext">
                                       <p>Kunu Studio randasi Manufaktūrų g. 16, Vilniuje. <br>Einant Manufaktūrų gatve pasukt į kaire ties pastatu su Harley Davidson logotipu. <br>Įėjimas į studiją yra iš vidinio kiemo, apėjus Harley Davidson pastatą. Studijas randasi antrame aukšte.<br><br>
                                         <a href="https://maps.app.goo.gl/pkjAKBXXCirLnpq78" target="_blank">Google žemelapio nuoroda</a>
                                       </p>
