--- a/sokiu-studijos-nuoma-vilniuje.html
+++ b/sokiu-studijos-nuoma-vilniuje.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:59:13 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 09:56:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674949cd74a9a24b9e488981" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -118,18 +118,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       </div>
                       <div class="login-tablet-wrapper">
                         <div class="wrapper-transparent-btn">
-                          <a href="#" class="button-transparent w-inline-block">
+                          <a href="kontaktai.html" class="button-transparent w-inline-block">
                             <div class="clip-2">
                               <div class="btn-banner-text">
-                                <div class="btn-title-text dark-text">PAšokam</div>
+                                <div class="btn-title-text dark-text">susisiekti</div>
                               </div>
                               <div class="btn-banner-text button-text-bottom">
-                                <div class="btn-title-text">pašokam Dance</div>
+                                <div class="btn-title-text">susisiekti</div>
                               </div>
-                            </div>
-                            <div class="clip-2">
-                              <div class="button-icon"><img src="images/Vector-6_1Vector-6.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
-                              <div class="button-icon button-icon-bottom"><img src="images/Vector-12_1Vector-12.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
                             </div>
                             <div class="button-hover-circle"></div>
                           </a>
@@ -184,7 +180,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <a href="kontaktai.html" class="button-transparent w-inline-block">
                     <div class="clip-2">
                       <div class="btn-banner-text">
-                        <div class="btn-title-text dark-text">susiekti</div>
+                        <div class="btn-title-text dark-text">susisiekti</div>
                       </div>
                       <div class="btn-banner-text button-text-bottom">
                         <div class="btn-title-text">susisiekti</div>
@@ -225,7 +221,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <div class="events-item">
                               <div class="team-item-card-2">
                                 <div class="contact_map_inner">
-                                  <div id="w-node-_19a8903f-62d2-1c4c-d486-ef6c7a8912a0-9e488981" class="team-intro-card---right">
+                                  <div id="w-node-_19a8903f-62d2-1c4c-d486-ef6c7a8912a0-9e488981" class="team-intro-card---right text-right">
                                     <div class="w-richtext">
                                       <p>Reikia tinkamos erdvės repeticijoms, renginiams ar kūrybinėms dirbtuvėms? Nuomokite profesionaliai įrengtą šokio studiją Vilniuje, pritaikytą tiek šokėjų, choreografų, tiek ir kitų menininkų poreikiams.</p>
                                       <p>Studijoje rasite erdvią salę su veidrodžiais, specialią šokių dangą, persirengimo erdvę, garso įrangą bei viską, kas reikalinga jūsų kūrybiniam procesui.</p>
@@ -260,7 +256,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                               <div class="team-item-card-2">
                                 <div class="contact_map_inner">
                                   <div id="w-node-e0110489-db9e-3ec4-750b-5cee155ad00c-9e488981" class="team-intro-card---right">
-                                    <div class="w-richtext">
+                                    <div class="text-align-right w-richtext">
                                       <p>Kunu Studio randasi Manufaktūrų g. 16, Vilniuje. <br>Einant Manufaktūrų gatve pasukt į kaire ties pastatu su Harley Davidson logotipu. <br>Įėjimas į studiją yra iš vidinio kiemo, apėjus Harley Davidson pastatą. Studijas randasi antrame aukšte.<br><br>
                                         <a href="https://maps.app.goo.gl/pkjAKBXXCirLnpq78" target="_blank">Google žemelapio nuoroda</a>
                                       </p>
