--- a/mokytojai.html
+++ b/mokytojai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:59:13 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 09:56:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67482406b467d25d8035ca92" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -118,18 +118,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       </div>
                       <div class="login-tablet-wrapper">
                         <div class="wrapper-transparent-btn">
-                          <a href="#" class="button-transparent w-inline-block">
+                          <a href="kontaktai.html" class="button-transparent w-inline-block">
                             <div class="clip-2">
                               <div class="btn-banner-text">
-                                <div class="btn-title-text dark-text">PAšokam</div>
+                                <div class="btn-title-text dark-text">susisiekti</div>
                               </div>
                               <div class="btn-banner-text button-text-bottom">
-                                <div class="btn-title-text">pašokam Dance</div>
+                                <div class="btn-title-text">susisiekti</div>
                               </div>
-                            </div>
-                            <div class="clip-2">
-                              <div class="button-icon"><img src="images/Vector-6_1Vector-6.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
-                              <div class="button-icon button-icon-bottom"><img src="images/Vector-12_1Vector-12.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
                             </div>
                             <div class="button-hover-circle"></div>
                           </a>
@@ -184,7 +180,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <a href="kontaktai.html" class="button-transparent w-inline-block">
                     <div class="clip-2">
                       <div class="btn-banner-text">
-                        <div class="btn-title-text dark-text">susiekti</div>
+                        <div class="btn-title-text dark-text">susisiekti</div>
                       </div>
                       <div class="btn-banner-text button-text-bottom">
                         <div class="btn-title-text">susisiekti</div>
@@ -251,13 +247,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="team-background-wrapper">
                         <div class="team-ov">
                           <div class="btn-wrap">
-                            <a href="#" target="_blank" class="button-link-3 w-inline-block">
+                            <a href="sokio-pamokos.html" target="_blank" class="button-link-3 w-inline-block">
                               <p class="social-icon"></p>
                             </a>
                           </div>
-                          <a href="#" class="team-link w-inline-block">
+                          <div class="team-link">
                             <p class="par-hidden">H</p>
-                          </a>
+                          </div>
                         </div>
                         <div class="background-photo top"></div>
                       </div>
@@ -289,13 +285,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="team-background-wrapper">
                         <div class="team-ov">
                           <div class="btn-wrap">
-                            <a href="#" target="_blank" class="button-link-3 w-inline-block">
+                            <a href="sokio-pamokos.html" target="_blank" class="button-link-3 w-inline-block">
                               <p class="social-icon"></p>
                             </a>
                           </div>
-                          <a href="#" class="team-link w-inline-block">
+                          <div class="team-link">
                             <p class="par-hidden">H</p>
-                          </a>
+                          </div>
                         </div>
                         <div class="background-photo top eglek"></div>
                       </div>
@@ -323,13 +319,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="team-background-wrapper">
                         <div class="team-ov">
                           <div class="btn-wrap">
-                            <a href="#" target="_blank" class="button-link-3 w-inline-block">
+                            <a href="sokio-pamokos.html" target="_blank" class="button-link-3 w-inline-block">
                               <p class="social-icon"></p>
                             </a>
                           </div>
-                          <a href="#" class="team-link w-inline-block">
+                          <div class="team-link">
                             <p class="par-hidden">H</p>
-                          </a>
+                          </div>
                         </div>
                         <div class="background-photo top jovita"></div>
                       </div>
@@ -355,13 +351,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="team-background-wrapper">
                         <div class="team-ov">
                           <div class="btn-wrap">
-                            <a href="#" target="_blank" class="button-link-3 w-inline-block">
+                            <a href="sokio-pamokos.html" target="_blank" class="button-link-3 w-inline-block">
                               <p class="social-icon"></p>
                             </a>
                           </div>
-                          <a href="#" class="team-link w-inline-block">
+                          <div class="team-link">
                             <p class="par-hidden">H</p>
-                          </a>
+                          </div>
                         </div>
                         <div class="background-photo top neringa"></div>
                       </div>
