--- a/privatus-renginiai-choreografija.html
+++ b/privatus-renginiai-choreografija.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 11 2024 16:59:13 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 09:56:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67580536b73d3e207f6c0446" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -118,18 +118,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       </div>
                       <div class="login-tablet-wrapper">
                         <div class="wrapper-transparent-btn">
-                          <a href="#" class="button-transparent w-inline-block">
+                          <a href="kontaktai.html" class="button-transparent w-inline-block">
                             <div class="clip-2">
                               <div class="btn-banner-text">
-                                <div class="btn-title-text dark-text">PAšokam</div>
+                                <div class="btn-title-text dark-text">susisiekti</div>
                               </div>
                               <div class="btn-banner-text button-text-bottom">
-                                <div class="btn-title-text">pašokam Dance</div>
+                                <div class="btn-title-text">susisiekti</div>
                               </div>
-                            </div>
-                            <div class="clip-2">
-                              <div class="button-icon"><img src="images/Vector-6_1Vector-6.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
-                              <div class="button-icon button-icon-bottom"><img src="images/Vector-12_1Vector-12.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
                             </div>
                             <div class="button-hover-circle"></div>
                           </a>
@@ -184,7 +180,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <a href="kontaktai.html" class="button-transparent w-inline-block">
                     <div class="clip-2">
                       <div class="btn-banner-text">
-                        <div class="btn-title-text dark-text">susiekti</div>
+                        <div class="btn-title-text dark-text">susisiekti</div>
                       </div>
                       <div class="btn-banner-text button-text-bottom">
                         <div class="btn-title-text">susisiekti</div>
@@ -218,7 +214,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <div class="outline-team-card-3">
                       <div class="form-bg---contact">
                         <div id="w-node-_50469bd2-8ee1-a5d5-eb62-0473a7853753-7f6c0446" class="form-title">
-                          <div class="contact-us-top-wrapper">
+                          <div class="contact-us-top-wrapper text-align-right">
                             <div class="stacked-title-con-2">
                               <h1>privatūs renginiai ir choreografija</h1>
                             </div>
